--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,16 @@
-dash==2.2.0
-dash-bootstrap-components==1.3.0
-pandas==1.5.3
-plotly==5.13.1
-python-dotenv==1.0.0
-langchain==0.0.123
-openai==0.27.7
+dash==2.17.1
+dash-bootstrap-components==1.6.0
+duckdb==1.0.0
+Flask==3.0.3
+langchain==0.2.11
+langchain-community==0.2.10
+langchain-core==0.2.24
+langchain-openai==0.1.19
+numpy==1.26.4
+openai==1.37.1
+pandas==2.2.2
+pathlib==1.0.1
+plotly==5.22.0
+psycopg2==2.9.9
+python-dotenv==1.0.1
+SQLAlchemy==2.0.31
