--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
 dash==2.17.1
 dash-bootstrap-components==1.6.0
 duckdb==1.0.0
-Flask==3.0.3
 langchain==0.2.11
 langchain-community==0.2.10
 langchain-core==0.2.24
@@ -9,8 +8,6 @@ langchain-openai==0.1.19
 numpy==1.26.4
 openai==1.37.1
 pandas==2.2.2
-pathlib==1.0.1
 plotly==5.22.0
-psycopg2==2.9.9
 python-dotenv==1.0.1
-SQLAlchemy==2.0.31
+gunicorn
